fixed the bug where the background was not showing but i had to use custom css.

--- a/Pokedex/src/index.css
+++ b/Pokedex/src/index.css
@@ -3,5 +3,81 @@
 @tailwind utilities;
 
 img {
-    image-rendering: pixelated;
-  }
+  image-rendering: pixelated;
+}
+
+.bg-normal {
+  background-color: #A8A878;
+}
+
+.bg-fire {
+  background-color: #F08030;
+}
+
+.bg-water {
+  background-color: #6890F0;
+}
+
+.bg-electric {
+  background-color: #F8D030;
+}
+
+.bg-grass {
+  background-color: #78C850;
+}
+
+.bg-ice {
+  background-color: #98D8D8;
+}
+
+.bg-fighting {
+  background-color: #C03028;
+}
+
+.bg-poison {
+  background-color: #A040A0;
+}
+
+.bg-ground {
+  background-color: #E0C068;
+}
+
+.bg-flying {
+  background-color: #A890F0;
+}
+
+.bg-psychic {
+  background-color: #F85888;
+}
+
+.bg-bug {
+  background-color: #A8B820;
+}
+
+.bg-rock {
+  background-color: #B8A038;
+}
+
+.bg-ghost {
+  background-color: #705898;
+}
+
+.bg-dragon {
+  background-color: #7038F8;
+}
+
+.bg-dark {
+  background-color: #705848;
+}
+
+.bg-steel {
+  background-color: #B8B8D0;
+}
+
+.bg-fairy {
+  background-color: #EE99AC;
+}
+/*I noticed that the CSS class names we're using in the JSX were not picking up the colors defined in 
+the Tailwind config file. As a workaround, I imported the color values directly into the CSS file to 
+ensure consistency with our design system. This allowed us to match the CSS class names with the corresponding 
+colors, ensuring a cohesive visual style across the application."*/
